use getDeclaredConstructor().newInstance() in ConfigurationSetup
https://errorprone.info/bugpattern/ClassNewInstance suggests this

using throw e.getCause() instead of instanceof, suggested by @dmlloyd